# MPUReconstruction

./: .gitignore  AxisKdTree.cpp  AxisKdTree.h  Bloomenthal.cpp  Bloomenthal.h  CMakeLists.txt  DicomLoad.cpp  Doxyfile  ImplicitFunction.cpp  ImplicitFunction.h  ImplicitOctTree.cpp  ImplicitOctTree.h  LocalApprox.h  MPU.kdevelop.pcs  NRUTIL.h  OctTreeP.cpp  OctTreeP.h  PointSet.h  PolygonalMesh.cpp  PolygonalMesh.h  Polygonizer.cpp  Polygonizer.h  Quadric.cpp  Quadric.h  QuadricO.cpp  QuadricO.h  QuadricOCorner.cpp  QuadricOCorner.h  QuadricOEdge.cpp  QuadricOEdge.h  README  SVD.cpp  SVD.h  StructForm.cpp  main.cpp  pbcg.cpp  pbcg.h  vtkMPU.cxx  vtkMPU.h  vtkMPU.xml  (+2 more)
data/: horse.vtp  prostate.vtp  prostateReconstruction.vtp
legacy/: IO.cpp  IO.h  MPU.cpp  MPU.h  MPU.kdevelop.pcs  Visualize.cpp  Visualize.h  filtering.cpp  filtering.h  main.h
paper/: shortbib.bib  vtkMPUReconstruction.tex
plugin/: CMakeLists.txt
